-*- Text -*-

---  Changes in SBCL CLX 0.6.1, FILL IN TIMESTAMP  ---

The ICCCM-compliant selection handling in demo/clipboard.lisp is now
more ICCCM-compliant.

---  Changes in SBCL CLX 0.6, Tue Nov 16 2004  ---

A port to ECL has been merged (Juan Jose Garcia Ripoll)

With the addition of an implementation of DYNAMIC-EXTENT &REST lists
to SBCL, various functions (e.g. READ-INPUT, QUEUE-EVENT) in CLX
should cons less.

A Texinfo version of the CLX manual has been added (in manual/), thanks
to the work of Gilbert Baumann and Shawn Betts.  

The portable-clx mailing list has been created for development discussion
and bug reports.  See 
http://lists.metacircles.com/cgi-bin/mailman/listinfo/portable-clx

A demonstration of ICCCM-compliant selection handling for select and paste
has been included in demo/clipboard.lisp

Bug fix: change the sizes of certain fields in a WM-SIZE-HINT to be 32
bits wide, as per the ICCCM specifications. Fixes a problem seen with
the MacOS X11 window manger, that uses very large hint values.
(Patch from Eric Marsden)

Bug fix: +POINTER-EVENT-MASK-VECTOR+ is supposed to be a vector of
keywords.  It wasn't, but it is now. (Milan Zamazal)

Bug fix: xrender now compiles properly when *DEF-CLX-CLASS-USE-DEFCLASS*
(Milan again)

---  Changes in SBCL CLX 0.5.4, Tue Nov 11 00:02:43 2003   ---

A change in the implementation of PROCESS-BLOCK and PROCESS-WAKEUP
under multithreaded SBCL.  Previous versions used queues and condition
variables, but this seems to have undesireable performance
characteristics; the newer version uses a polling loop calling
sched_yield() inside, which greatly improves responsiveness, but is
more CPU-hungry (as perceived by top(1), at least; in theory it
only hogs the CPU when nobody else wants it).


---  Changes in SBCL CLX 0.5.3, Sat Sep  6 12:14:39 UTC 2003 ---

We allow a PIXMAP-DEPTH of 12 in clx.lisp, despite not having any
image routines for it, to allow clx to load when running under eXceed.